# ue5-project

./: .gitignore  README.md  Setup.bat
Server/: CMake-VS-17-2022.bat  CMakeLists.txt
Server/Project/: ALL_BUILD.vcxproj  CMakeCache.txt  cmake_install.cmake
Server/Project/Source/Runtime/Server/: ServerModule.vcxproj  ServerModule.vcxproj.filters  cmake_install.cmake
Server/Project/Source/Runtime/Server/ServerModule.dir/Debug/: ServerModule.exe.recipe
Server/Project/Source/Runtime/Server/ServerModule.dir/Debug/ServerModule.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ServerModule.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Server/Source/Runtime/Server/: CMakeLists.txt  Connection.cpp  Connection.h  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  engine.cpp  engine.h  main.cpp  pch.cpp  pch.h
Shooter/: Shooter.uproject
Shooter/Config/: DefaultEngine.ini  DefaultGame.ini
Shooter/Content/A_Surface_Footstep/Environment_Assets/: SM_Scapes1.uasset
Shooter/Content/AnimStarterPack/UE5/: UE5_Aim_Space_Hip.uasset  UE5_Aim_Space_Ironsights.uasset  UE5_BS_CrouchWalk.uasset  UE5_BS_Jog.uasset  UE5_Crouch_Idle_Rifle_Hip.uasset  UE5_Crouch_Idle_Rifle_Ironsights.uasset  UE5_Crouch_Walk_Bwd_Rifle_Hip.uasset  UE5_Crouch_Walk_Bwd_Rifle_Hip1.uasset  UE5_Crouch_Walk_Bwd_Rifle_Ironsights.uasset  UE5_Crouch_Walk_Fwd_Rifle_Hip.uasset  UE5_Crouch_Walk_Fwd_Rifle_Hip1.uasset  UE5_Crouch_Walk_Fwd_Rifle_Ironsights.uasset  UE5_Crouch_Walk_Lt_Rifle_Hip.uasset  UE5_Crouch_Walk_Lt_Rifle_Hip1.uasset  UE5_Crouch_Walk_Lt_Rifle_Ironsights.uasset  UE5_Crouch_Walk_Rt_Rifle_Hip.uasset  UE5_Crouch_Walk_Rt_Rifle_Hip1.uasset  UE5_Crouch_Walk_Rt_Rifle_Ironsights.uasset  UE5_Crouch_to_Stand_Rifle_Hip.uasset  UE5_Crouch_to_Stand_Rifle_Ironsights.uasset  UE5_Death_1.uasset  UE5_Death_2.uasset  UE5_Death_3.uasset  UE5_Death_Ironsights_1.uasset  UE5_Death_Ironsights_2.uasset  UE5_Equip_Pistol_Standing.uasset  UE5_Equip_Rifle_Standing.uasset  UE5_Fire_Rifle_Hip.uasset  UE5_Fire_Rifle_Ironsights.uasset  UE5_Fire_Shotgun_Hip.uasset  UE5_Fire_Shotgun_Ironsights.uasset  UE5_Hit_React_1.uasset  UE5_Hit_React_1_Montage.uasset  UE5_Hit_React_2.uasset  UE5_Hit_React_3.uasset  UE5_Hit_React_4.uasset  UE5_Idle_Pistol.uasset  UE5_Idle_Rifle_Hip.uasset  UE5_Idle_Rifle_Hip_Break1.uasset  UE5_Idle_Rifle_Hip_Break2.uasset  (+33 more)
Shooter/Content/Chestnuts_Pack/Meshes/: SM_Chestnut_09_G.uasset  SM_Chestnut_10_G.uasset  SM_Chestnut_11_G.uasset
Shooter/Content/MilitaryWeapDark/: Overview.umap
Shooter/Content/MilitaryWeapDark/FX/: P_AssaultRifle_MuzzleFlash.uasset  P_AssaultRifle_Tracer_01.uasset  P_Grenade_Explosion_01.uasset  P_Grenade_MuzzleFlash_01.uasset  P_Grenade_Trail_01.uasset  P_Impact_Metal_Large_01.uasset  P_Impact_Metal_Medium_01.uasset  P_Impact_Metal_Small_01.uasset  P_Impact_Stone_Large_01.uasset  P_Impact_Stone_Medium_01.uasset  P_Pistol_Tracer_01.uasset  (+14 more)
Shooter/Plugins/Manager/: Manager.uplugin
Shooter/Source/: ShooterClient.Target.cs
Shooter/Source/Shooter/: Shooter.Build.cs
(+493 files in other folders)
